fixing form verification for user signup and username change. also fixed the username / error message form aesthetically so longer messages don't break the page format. removed version numbers from app's requirement file to resolve low level jinja import error (not an issue with code).

--- a/app/static/inner-containers.css
+++ b/app/static/inner-containers.css
@@ -250,6 +250,7 @@ div.entry-item div.button-row a {
 	padding-left: 15px;
 	justify-content: flex-start;
 	align-items: flex-start;
+	flex-direction: column;
 	border-left: 2px dashed #757a79;
 }
 .save-discard {
